# agent_bootstrap

./: .gitignore  CLAUDE.md  docker-compose.yml  eslint.config.js  idea.md  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/cli/: package.json  tsconfig.json
apps/cli/src/: api.ts  config.ts  index.ts  utils.ts
apps/runtime/: Dockerfile  package.json  tsconfig.json
apps/runtime/src/: auto-update.ts  config.ts  hub-client.ts  main.ts  memory-cache.ts  platform.ts  skill-sandbox.ts  tls.ts  types.d.ts
apps/web/: package.json  tsconfig.json
apps/web/src/app/: layout.tsx  (+1 more)
docs/: firestore-schema.md
docs/adr/: 001-architecture-overview.md  002-llm-routing-strategy.md  003-prompt-injection-mitigation.md  004-data-classification-dlp.md  005-stripe-billing-pci.md  README.md
docs/guide/: README.md  cli-reference.md  getting-started.md
docs/runbook/: README.md
docs/security/: whitepaper.md
functions/memory-writer/: package.json  tsconfig.json
functions/memory-writer/src/: index.ts
infra/: main.tf  outputs.tf  variables.tf
infra/environments/: dev.tfvars  prod.tfvars  staging.tfvars
infra/modules/artifact-registry/: main.tf  outputs.tf
infra/modules/certificate-authority/: main.tf  outputs.tf  variables.tf
services/api-gateway/: Dockerfile  package.json  tsconfig.json
services/billing/: Dockerfile  package.json  tsconfig.json
services/llm-router/: Dockerfile  package.json  tsconfig.json
services/orchestrator/: Dockerfile  Makefile  pyproject.toml
services/orchestrator/src/nexus_orchestrator/: config.py  grpc_server.py  main.py
services/orchestrator/src/nexus_orchestrator/events/: publisher.py
services/orchestrator/src/nexus_orchestrator/llm/: router_client.py
services/orchestrator/src/nexus_orchestrator/memory/: kernel_store.py  publisher.py  retriever.py
services/orchestrator/src/nexus_orchestrator/proto/: agent_session_pb2.py  agent_session_pb2_grpc.py
services/orchestrator/src/nexus_orchestrator/session/: context_builder.py  lifecycle.py  manager.py
services/orchestrator/src/nexus_orchestrator/skills/: executor.py  loader.py
services/orchestrator/src/nexus_orchestrator/workflow/: dag.py  engine.py  models.py  store.py
services/orchestrator/tests/: conftest.py  test_dag.py  test_lifecycle.py
services/skill-registry/: Dockerfile  package.json  tsconfig.json
skills/core/calendar-manage/: pyproject.toml  skill.json
skills/core/calendar-manage/src/calendar_manage/: execute.py
skills/core/code-interpreter/: pyproject.toml  skill.json
skills/core/code-interpreter/src/code_interpreter/: execute.py
skills/core/doc-summarizer/: pyproject.toml  skill.json
skills/core/doc-summarizer/src/doc_summarizer/: execute.py
skills/core/file-reader/: pyproject.toml  skill.json
skills/core/file-reader/src/file_reader/: execute.py
skills/core/http-client/: pyproject.toml  skill.json
skills/core/http-client/src/http_client/: execute.py
skills/core/shell-exec/: pyproject.toml  skill.json
skills/core/shell-exec/src/shell_exec/: execute.py
skills/core/web-search/: pyproject.toml  skill.json
skills/core/web-search/src/web_search/: execute.py
tests/load/: agents.js  full-load.js  health.js  package.json  sessions.js
(+103 files in other folders)
