[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-skill-code-interpreter"
version = "1.0.0"
description = "Executes Python or JavaScript code in a sandboxed environment."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
