[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-skill-doc-summarizer"
version = "1.0.0"
description = "Summarizes long documents using the configured LLM."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
