[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-skill-web-search"
version = "1.0.0"
description = "Performs web searches and returns summarized results."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
